// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`p6-textarea add the class "is-static" when the readonly props is true 1`] = `
<p6-textarea readonly="">
  <mock:shadow-root>
    <div class="control">
      <textarea class="is-static textarea" readonly=""></textarea>
    </div>
  </mock:shadow-root>
</p6-textarea>
`;

exports[`p6-textarea add the waiting class on the input container, not on the input 1`] = `
<p6-textarea waiting="">
  <mock:shadow-root>
    <div class="control is-loading">
      <textarea class="textarea"></textarea>
    </div>
  </mock:shadow-root>
</p6-textarea>
`;

exports[`p6-textarea renders 1`] = `
<p6-textarea>
  <mock:shadow-root>
    <div class="control">
      <textarea class="textarea"></textarea>
    </div>
  </mock:shadow-root>
</p6-textarea>
`;
